--- a/about-us.css
+++ b/about-us.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "Mark Pro";
-  src: url("fonts/Mark Pro.woff2") format("woff2"),
-    url("fonts/Mark Pro.woff") format("woff");
+  src: url("fonts/Mark Pro.woff2") format("woff2"), url("fonts/Mark Pro.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
