--- a/news.css
+++ b/news.css
@@ -3,6 +3,151 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
 }
+.nav_container div {
+  box-sizing: border-box;
+  height: 80px;
+  width: auto;
+}
+.nav_container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  display: flex;
+  background-color: #111111;
+  z-index: 100;
+  transition: 3s;
+}
+.riot_logo {
+  display: inline-flex;
+  align-items: center;
+  padding: 0 0 0 35px;
+  border: 0;
+  margin: 0;
+}
+.riot_logo > #img_link > #img_riotLogo {
+  height: 24px;
+  width: 95px;
+  cursor: pointer;
+}
+.riot_logo > #img_link > #img_riotLogo:hover {
+  content: url("images/logo_red.png");
+}
+.fistLogo_container div {
+  padding: 0 0 0 15px;
+  width: 50px;
+  height: 80px;
+}
+.riot_secondlogo {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+.riot_secondlogo > #img_secondLogo {
+  height: 25px;
+  width: 28px;
+}
+.Info_container div {
+  display: flex;
+  justify-content: flex-start;
+  width: 700px;
+}
+.info_list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 0 0 40px;
+}
+#InfoList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+#InfoList li {
+  display: inline-block;
+  margin-right: 35px;
+  color: white;
+  font-size: 14px;
+  letter-spacing: 1.5px;
+  background-color: transparent;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+}
+#InfoList li:hover {
+  background-color: rgb(255, 255, 255, 0.2);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+}
+.upper-right_nav {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  margin-right: 50px;
+}
+.upper-right_nav > .worldLogo_container {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin-right: 20px;
+}
+.upper-right_nav > .worldLogo_container > #world_logo {
+  height: 32px;
+  width: 32px;
+  padding: 5px;
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.upper-right_nav > .worldLogo_container > #world_logo:hover {
+  background-color: rgb(255, 255, 255, 0.2);
+}
+.upper-right_nav > .search_container {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  justify-content: flex-end;
+  margin-right: 20px;
+}
+.upper-right_nav > .search_container > .search_box {
+  border: 1px solid white;
+  background-color: #282828;
+  padding: 8px;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  color: white;
+}
+.upper-right_nav > .search_box::placeholder {
+  font-size: 12px;
+  padding: 10px;
+}
+.upper-right_nav > .signIn_container {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.upper-right_nav > .signIn_container > #signIn_button {
+  border: 0;
+  background-color: red;
+  padding: 10px;
+  border-radius: 20px;
+  width: 100px;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+.upper-right_nav > .signIn_container > #signIn_button:hover {
+  border: 1px solid white;
+  color: white;
+}
 .top-bar {
   background-color: #111111;
   top: 0;
@@ -174,8 +319,7 @@ body {
 
 @font-face {
   font-family: "Mark Pro";
-  src: url("fonts/Mark Pro.woff2") format("woff2"),
-    url("fonts/Mark Pro.woff") format("woff");
+  src: url("fonts/Mark Pro.woff2") format("woff2"), url("fonts/Mark Pro.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
