--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
   background-color: #222222;
   margin: auto;
   padding: 0;
-  height: 100%;
+  height: auto;
   overflow: auto;
 }
 .nav_container div {
@@ -31,9 +31,13 @@ body {
   border: 0;
   padding: 0;
   display: flex;
-  background-color: #111111;
+  background-color: transparent;
+  transition: 0.1s;
   z-index: 100;
-  transition: 3s;
+}
+.nav_scrolled {
+  background-color: #111111;
+  transition: 0.1s;
 }
 .riot_logo {
   display: inline-flex;
@@ -46,6 +50,7 @@ body {
   height: 24px;
   width: 95px;
   cursor: pointer;
+  margin-bottom: 5px;
 }
 .riot_logo > #img_riotLogo:hover {
   content: url("images/logo_red.png");
@@ -90,6 +95,7 @@ body {
   letter-spacing: 1.5px;
   background-color: transparent;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700;
   border-radius: 5px;
   padding: 5px;
   cursor: pointer;
@@ -99,6 +105,12 @@ body {
   color: white;
   padding: 5px;
   border-radius: 5px;
+}
+#InfoList li > .dropdownAboutUs,
+#InfoList li > .dropdownNewsUs{
+  height: 10px;
+  width: 10px;
+  margin-left: 5px;
 }
 .upper-right_nav {
   position: absolute;
@@ -114,8 +126,8 @@ body {
   margin-right: 20px;
 }
 .upper-right_nav > .worldLogo_container > #world_logo {
-  height: 32px;
-  width: 32px;
+  height: 37px;
+  width: 37px;
   padding: 5px;
   background-color: transparent;
   border-radius: 5px;
@@ -134,14 +146,23 @@ body {
 .upper-right_nav > .search_container > .search_box {
   border: 1px solid white;
   background-color: #282828;
-  padding: 8px;
-  border-radius: 20px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 30px;
+  border-radius: 15px;
   font-size: 0.9rem;
   color: white;
+  width: 200px;
 }
-.upper-right_nav > .search_box::placeholder {
+.search_box::placeholder {
   font-size: 12px;
-  padding: 10px;
+}
+.upper-right_nav > .search_container > .search_icon {
+  height: 22px;
+  width: 22px;
+  margin-left: -30px;
+  cursor: pointer;
 }
 .upper-right_nav > .signIn_container {
   padding: 0;
@@ -152,7 +173,7 @@ body {
 .upper-right_nav > .signIn_container > #signIn_button {
   border: 0;
   background-color: red;
-  padding: 10px;
+  padding: 7px;
   border-radius: 20px;
   width: 100px;
   border: 1px solid transparent;
@@ -916,7 +937,7 @@ body {
 .career_container {
   background-color: white;
   position: relative;
-  top: -200px;
+  margin-top: -200px;
   height: 600px;
   width: 100%;
   display: flex;
@@ -989,6 +1010,7 @@ body {
 }
 .career_container > .hiring_info > .career_explore:hover {
   background-color: #f75d59;
+  cursor: pointer;
 }
 .hiringImg_container {
   position: relative;
@@ -1078,6 +1100,7 @@ footer {
 .footer-container {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .logo {
@@ -1099,20 +1122,18 @@ footer {
 }
 ul.left {
   list-style-type: none;
-  margin-top: 10px;
-  margin-right: 50px;
   padding: 0;
   display: flex;
-  margin-left: 40px;
+  align-items: center;
+  margin-left: 20px;
   font-size: 12px;
   font-family: "Mark Pro", Arial, sans-serif;
   font-weight: bolder;
   color: #656462;
 }
-
 ul.left li {
   margin-top: 10px;
-  margin-right: 32.5px;
+  margin-right: 20px;
   cursor: pointer;
 }
 
@@ -1183,6 +1204,11 @@ ul.left li:hover {
 .icon .is-vhidden {
   display: none;
 }
+.right-text {
+  cursor: pointer;
+}
+
+
 /* For Small Screens */
 @media (max-width: 768px) {
   body {
