Filter - Everything and Offices Toggle

--- a/news.css
+++ b/news.css
@@ -362,7 +362,7 @@ body {
   color: rgb(101, 100, 98);
   margin-right: 5px;
 }
-#everything {
+#everythingDefault {
   color: #ffffff; /* White color */
 }
 #NewsDropdown {
