--- a/news.css
+++ b/news.css
@@ -105,6 +105,24 @@ body {
   width: 10px;
   margin-left: 5px;
 }
+#InfoList li >.dropdown_content {
+  display: none;
+  width: 150px;
+  height: 120px;
+  position: absolute;
+  background-color: #292929;
+  padding: 10px 5px 5px 5px;
+  color: white;
+  z-index: 1;
+  font-size: 0.9rem;
+  margin-left: -5px;
+  margin-top: 15px;
+  border-top: 2px solid red;
+}
+#InfoList li >.dropdown_content li {
+  width: 140px;
+  margin-top: 5px;
+}
 .upper-right_nav {
   position: absolute;
   top: 0;
