--- a/news.css
+++ b/news.css
@@ -232,11 +232,6 @@ body {
   height: 80px;
 }
 
-.left,
-.right {
-  display: flex;
-  align-items: center;
-}
 
 /* static/styles.css */
 #RiotGamesName img {
@@ -1307,7 +1302,64 @@ cursor: pointer;
   transform: scale(1.1);
 }
 
-footer {
+.footer_container {
+  margin: 0;
+  padding: 0;
+  height: 150px;
+  width: 100%;
+  margin-top: -150px;
+}
+.footer_container > .footer_upper {
+  display: flex;
+  flex-direction: row;
+}
+.footer_container > .footer_upper > .nocircle_fist {
+  height: 30px;
+  width: 38px;
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+}
+.footer_container > .footer_upper > .nav_down {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-left: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.footer_container > .footer_upper > .nav_down > li {
+  width: auto;
+  display: flex;
+  margin-right: 30px;
+  color: gray;
+  font-size: 12px;
+  font-family: "Times New Roman", Times, serif;
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+  align-items: center;
+}
+.footer_container > .footer_upper > .nav_down > li:hover {
+  color: white;
+}
+.separator {
+  height: 2px;
+  width: 95%;
+  background-color: gray;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: block;
+}
+.footer_lower {
+  margin-left: 40px;
+  color: gray;
+  font-size: 1rem;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.footer {
   background-color: #252423;
   color: #ffffff;
   height: 195px;
@@ -1317,6 +1369,7 @@ footer {
 .footer-container {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .logo {
@@ -1338,20 +1391,18 @@ footer {
 }
 ul.left {
   list-style-type: none;
-  margin-top: 10px;
-  margin-right: 50px;
   padding: 0;
   display: flex;
-  margin-left: 40px;
+  align-items: center;
+  margin-left: 20px;
   font-size: 12px;
   font-family: "Mark Pro", Arial, sans-serif;
   font-weight: bolder;
   color: #656462;
 }
-
 ul.left li {
   margin-top: 10px;
-  margin-right: 32.5px;
+  margin-right: 20px;
   cursor: pointer;
 }
 
@@ -1419,12 +1470,14 @@ ul.left li:hover {
 .footer__social {
   margin-right: 20px;
 }
-.right-text {
-  cursor: pointer;
-}
 .icon .is-vhidden {
   display: none;
 }
+.right-text {
+  cursor: pointer;
+}
+
+
 
 .button:before {
   content: "/";
