--- a/about-us.css
+++ b/about-us.css
@@ -384,7 +384,7 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  height: 90%;
+  height: 100%;
   z-index: 0;
 }
 
@@ -447,7 +447,7 @@ h1 {
   background-size: cover; /* Cover the entire width */
   background-position: center; /* Center the image horizontally */
   background-repeat: no-repeat;
-  height: 100vh; /* Adjust the height as needed */
+  height: 800px; /* Adjust the height as needed */
   width: 100%; /* Cover the entire width */
 }
 
@@ -458,18 +458,29 @@ h1 {
   justify-content: space-between;
   align-items: center; /* Vertically center the text */
   height: 80%;
-  padding: 10px;
   box-sizing: border-box;
 }
 
-.column {
+.column1,
+.column2,
+.column3,
+.column4,
+.column5 {
   flex: 1; /* Let the text take up all available space within the column */
   text-align: center;
-  padding: 10px;
-  margin-bottom: 10px;
+  width: 50px;
+  margin-top: 70px;
   font-weight: 900;
-  font-size: x-large;
+  font-size: 1.35rem;
   color: rgb(255, 255, 255);
+}
+
+.column2,
+.column3 {
+  margin-left: -20px;
+}
+.column1 {
+  margin-left: -25px;
 }
 
 .heading.heading--4 {
@@ -486,11 +497,21 @@ h1 {
   display: flex;
   position: relative;
   background-size: cover;
-  min-height: 120vhx;
+  height: 1000px;
   flex-direction: column;
   justify-content: flex-start;
   background-size: cover;
   background-image: url("images/we aspire part.png");
+}
+
+.background-container > .text-center p {
+  text-align: justify;
+}
+
+.background-container > .text-center > #WeAspire_text {
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .flex-container {
@@ -513,10 +534,31 @@ h1 {
   position: relative;
   background-size: cover;
   min-height: 100vh;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   background-size: cover;
   background-image: url("images/we aspire part.png");
+}
+
+.section5-container > .flex-container > .image1-container {
+  margin-right: 50px;
+}
+
+div.text-content {
+  margin-left: 50px;
+}
+
+.section5b-container {
+  display: flex;
+  position: relative;
+  background-size: cover;
+  min-height: 100vh;
+  flex-direction: row;
+  background-size: cover;
+  background-image: url("images/we aspire part.png");
+}
+
+.section5b-container > .flex-container > .image2-container {
+  margin-left: 100px;
 }
 
 .text-with-cta {
@@ -604,6 +646,21 @@ h1 {
   align-items: center;
   justify-content: center;
   margin-bottom: 25px;
+}
+
+.row > .location-container > .image-column #image1:hover,
+.row > .location-container > .image-column #image2:hover,
+.row > .location-container > .image-column #image3:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.row >.location-container > .info-column {
+  cursor: pointer;
+}
+
+.row >.location-container > .open-positions-column {
+  cursor: pointer;
 }
 
 .location-container {
