--- a/about-us.css
+++ b/about-us.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Mark Pro";
-  src: url("fonts/Mark Pro.woff2") format("woff2"), url("fonts/Mark Pro.woff") format("woff");
+  src: url("fonts/Mark Pro.woff2") format("woff2"),
+    url("fonts/Mark Pro.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -100,12 +101,12 @@ body {
   border-radius: 5px;
 }
 #InfoList li > .dropdownAboutUs,
-#InfoList li > .dropdownNewsUs{
+#InfoList li > .dropdownNewsUs {
   height: 10px;
   width: 10px;
   margin-left: 5px;
 }
-#InfoList li >.dropdown_content {
+#InfoList li > .dropdown_content {
   display: none;
   width: 150px;
   height: 120px;
@@ -119,7 +120,7 @@ body {
   margin-top: 15px;
   border-top: 2px solid red;
 }
-#InfoList li >.dropdown_content li {
+#InfoList li > .dropdown_content li {
   width: 140px;
   margin-top: 5px;
 }
@@ -130,7 +131,7 @@ body {
   height: 250px;
   position: absolute;
   background-color: whitesmoke;
-  color: #ABB0B8;
+  color: #abb0b8;
   z-index: 1;
   margin-top: 320px;
   margin-left: -80px;
@@ -375,7 +376,6 @@ main {
 .text-center {
   text-align: center;
   width: 100%;
-  
 }
 
 .video-background {
@@ -550,10 +550,9 @@ h1 {
   margin-bottom: 20px;
 }
 
-.text-content p{
+.text-content p {
   flex: 2;
   text-align: justify;
-
 }
 
 .section5-container {
@@ -664,7 +663,6 @@ div.text-content {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .row {
@@ -677,16 +675,16 @@ div.text-content {
 
 .row > .location-container > .image-column #image1:hover,
 .row > .location-container > .image-column #image2:hover,
-.row > .location-container > .image-column #image3:hover{
+.row > .location-container > .image-column #image3:hover {
   cursor: pointer;
   transform: scale(1.1);
 }
 
-.row >.location-container > .info-column {
+.row > .location-container > .info-column {
   cursor: pointer;
 }
 
-.row >.location-container > .open-positions-column {
+.row > .location-container > .open-positions-column {
   cursor: pointer;
 }
 
@@ -884,7 +882,6 @@ ul.left li:hover {
 .icon .is-vhidden {
   display: none;
 }
-
 
 .button:before {
   content: "/";
