--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@
 }
 @font-face {
   font-family: "Mark Pro";
-  src: url("fonts/Mark Pro.woff2") format("woff2"), url("fonts/Mark Pro.woff") format("woff");
+  src: url("fonts/Mark Pro.woff2") format("woff2"),
+    url("fonts/Mark Pro.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -114,12 +115,12 @@ body {
   border-radius: 5px;
 }
 #InfoList li > .dropdownAboutUs,
-#InfoList li > .dropdownNewsUs{
+#InfoList li > .dropdownNewsUs {
   height: 10px;
   width: 10px;
   margin-left: 5px;
 }
-#InfoList li >.dropdown_content {
+#InfoList li > .dropdown_content {
   display: none;
   width: 150px;
   height: 120px;
@@ -133,7 +134,7 @@ body {
   margin-top: 15px;
   border-top: 2px solid red;
 }
-#InfoList li >.dropdown_content li {
+#InfoList li > .dropdown_content li {
   width: 140px;
   margin-top: 5px;
 }
@@ -144,7 +145,7 @@ body {
   height: 250px;
   position: absolute;
   background-color: whitesmoke;
-  color: #ABB0B8;
+  color: #abb0b8;
   z-index: 1;
   margin-top: 320px;
   margin-left: -80px;
@@ -956,7 +957,7 @@ body {
   margin-top: -150px;
 }
 .RiotForge_mainContainer > .nextback_arrows {
- margin-bottom: -300px;
+  margin-bottom: -300px;
   display: flex;
   justify-content: end;
   margin-right: 60px;
@@ -1309,7 +1310,6 @@ ul.left li:hover {
 .right-text {
   cursor: pointer;
 }
-
 
 /* For Small Screens */
 @media (max-width: 768px) {
