--- a/news.css
+++ b/news.css
@@ -100,12 +100,12 @@ body {
   border-radius: 5px;
 }
 #InfoList li > .dropdownAboutUs,
-#InfoList li > .dropdownNewsUs{
+#InfoList li > .dropdownNewsUs {
   height: 10px;
   width: 10px;
   margin-left: 5px;
 }
-#InfoList li >.dropdown_content {
+#InfoList li > .dropdown_content {
   display: none;
   width: 150px;
   height: 120px;
@@ -119,7 +119,7 @@ body {
   margin-top: 15px;
   border-top: 2px solid red;
 }
-#InfoList li >.dropdown_content li {
+#InfoList li > .dropdown_content li {
   width: 140px;
   margin-top: 5px;
 }
@@ -130,7 +130,7 @@ body {
   height: 250px;
   position: absolute;
   background-color: whitesmoke;
-  color: #ABB0B8;
+  color: #abb0b8;
   z-index: 1;
   margin-top: 320px;
   margin-left: -80px;
@@ -232,7 +232,6 @@ body {
   height: 80px;
 }
 
-
 /* static/styles.css */
 #RiotGamesName img {
   width: 150px; /* Adjust this value to change the width of Riot Games Name image */
@@ -323,7 +322,7 @@ body {
   border-radius: 20px;
 }
 
-.right button{
+.right button {
   border: 0;
   background-color: red;
   padding: 10px;
@@ -332,13 +331,12 @@ body {
   border: 1px solid transparent;
   cursor: pointer;
 }
-.button-container{
+.button-container {
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
-
 
 .language-selector {
   display: flex;
@@ -434,13 +432,13 @@ body {
 .ximg > #x_button:hover {
   content: url(images/red_x.png);
 }
- span#filter {
+span#filter {
   color: white;
   font-size: 1.5rem;
   position: relative;
   left: 70px;
 }
-.dropdown_option ul{
+.dropdown_option ul {
   list-style: none;
   font-size: 1.1rem;
   display: flex;
@@ -450,9 +448,9 @@ body {
   margin-top: -10px;
 }
 .dropdown_option li {
-margin-top: 25px;
-color: white;
-cursor: pointer;
+  margin-top: 25px;
+  color: white;
+  cursor: pointer;
 }
 
 .dropdown_option ul li::before {
@@ -463,8 +461,8 @@ cursor: pointer;
   background: red;
   bottom: 0;
   left: 0;
-  transition: width 0.3s; 
-  z-index: -1; 
+  transition: width 0.3s;
+  z-index: -1;
 }
 
 /* Hover effect */
@@ -473,7 +471,7 @@ cursor: pointer;
 }
 .dropdown_option ul li {
   text-decoration: none;
-  position: relative; 
+  position: relative;
   margin-top: 25px;
   color: white;
   cursor: pointer;
@@ -1476,8 +1474,6 @@ ul.left li:hover {
 .right-text {
   cursor: pointer;
 }
-
-
 
 .button:before {
   content: "/";
