--- a/news.css
+++ b/news.css
@@ -199,6 +199,7 @@ body {
   height: 22px;
   width: 22px;
   margin-left: -30px;
+  cursor: pointer;
 }
 .upper-right_nav > .signIn_container {
   padding: 0;
